kubernetes/deployment.yaml
# Deployment
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: lab-location
  namespace: lab-location
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: lab-location
    spec:
      containers:
        - image: informaticslab/lab-location-service:latest
          imagePullPolicy: Always
          name: lab-location
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
